--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,13 @@
 ::-webkit-scrollbar-thumb:hover {
     background: rgb(0, 0, 0);
 }
+
+/* video background */
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0.3;
+}
