front page styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,3 +110,15 @@
     background-color: transparent !important;
     opacity: 1 !important;
 }
+
+textarea.materialize-textarea:focus:not([readonly])+label {
+    color:black !important;
+}
+
+textarea.materialize-textarea {
+    border-bottom: 1px solid grey !important;
+}
+
+.input-field{
+    display: flex;
+}
