--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 .cursive {
     font-family: 'Pinyon Script', cursive;
+    text-align: center;
 }
 
 .front-page {
@@ -72,7 +73,6 @@
 }
 .about {
     text-align: center;
-    margin-left: 200px;
 }
 .modal-header .title {
     font-size: 1.25rem;
