--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@
     max-width: 60% !important;
 }
 /* Modal displayed */
-.mod.active {
+.mod.open {
     transform: translate(-50%, -50%) scale(1);
 }
 /* modal header */
@@ -101,7 +101,7 @@
     pointer-events: none;
 }
 /* Displayed overlay of modal */
-#overlay.active {
+#overlay.open {
     opacity: 1;
     pointer-events: all;
 }
