added background to reps list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,3 +127,7 @@ textarea.materialize-textarea {
 .input-field{
     display: flex;
 }
+
+.collection-item.active {
+    background-color:rgb(0, 0, 0, .5) !important;
+}
