--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,3 @@
-.cursive {
-    font-family: 'Pinyon Script', cursive;
-    text-align: center;
-}
-
-.front-page {
-    font-size: 180px;
-}
-.scroll-box {
-    overflow-y: scroll;
-    height: 200px;
-}
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #ffffff;
-}       
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: rgb(255, 255, 255);
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: rgb(0, 0, 0);
-}
-
 /* video background */
 #myVideo {
     position: fixed;
@@ -39,6 +7,7 @@
     min-height: 100%;
     opacity: 0.3;
 }
+
 /* entire modal section in it's original state, not displayed */
 .mod {
     position: fixed !important; 
@@ -53,10 +22,7 @@
     width: 400px !important;
     max-width: 60% !important;
 }
-/* Modal displayed */
-.mod.open {
-    transform: translate(-50%, -50%) scale(1);
-}
+
 /* modal header */
 .modal-header {
     padding: 10px 15px;
@@ -66,19 +32,13 @@
     text-align: center;
     border-bottom: 1px solid black;
 }
-#bernie {
-    margin-left: 35%;
-    margin-top: 10px;
-    border-radius: 10px;
-}
-.about {
-    text-align: center;
-}
+
 .modal-header .title {
     font-size: 1.25rem;
     font-weight: bold;
     text-align: center;
 }
+
 /* close button (X) in modal */
 .modal-header .close-button {
     cursor: pointer;
@@ -88,6 +48,13 @@
     font-size: 2rem;
     font-weight: bold;
 }
+
+#bernie {
+    margin-left: 35%;
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
 /* Original state of overlay, not displayed */
 #overlay {
     position: fixed;
@@ -100,11 +67,41 @@
     background-color: rgba(0, 0, 0, .5);
     pointer-events: none;
 }
+
+/* Modal displayed */
+.mod.open {
+    transform: translate(-50%, -50%) scale(1);
+}
+
 /* Displayed overlay of modal */
 #overlay.open {
     opacity: 1;
     pointer-events: all;
 }
+
+.cursive {
+    font-family: 'Pinyon Script', cursive;
+}
+
+/* Header font size */
+.front-page {
+    font-size: 180px;
+}
+
+/* Inline form */
+.input-field{
+    display: flex;
+}
+
+/* Customizing form input to match page style */
+textarea.materialize-textarea:focus:not([readonly])+label {
+    color:black !important;
+}
+
+textarea.materialize-textarea {
+    border-bottom: 1px solid grey !important;
+}
+
 /* list color */
 .collection-header {
     background-color: transparent !important;
@@ -116,18 +113,28 @@
     opacity: 1 !important;
 }
 
-textarea.materialize-textarea:focus:not([readonly])+label {
-    color:black !important;
-}
-
-textarea.materialize-textarea {
-    border-bottom: 1px solid grey !important;
-}
-
-.input-field{
-    display: flex;
-}
-
 .collection-item.active {
     background-color:rgb(0, 0, 0, .5) !important;
+}
+
+/* Scroll to prevent text overflow on cards */
+.scroll-box {
+    overflow-y: scroll;
+    height: 200px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #ffffff;
+}       
+
+::-webkit-scrollbar-thumb {
+    background: rgb(255, 255, 255);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(0, 0, 0);
 }
