--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,11 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     color:black !important;
 }
 
+textarea.materialize-textarea:focus:not([readonly]) {
+    border-bottom: .5px black !important;
+    box-shadow: 0 1px 0 0  black !important;
+}
+
 textarea.materialize-textarea {
     border-bottom: 1px solid grey !important;
 }
